[gd_scene load_steps=7 format=3 uid="uid://b7muxbfnxac0o"]

[ext_resource type="Script" path="res://src/activities/compact_view.gd" id="1_frukj"]
[ext_resource type="Texture2D" uid="uid://b0wi4rao1cyiq" path="res://resources/buttons/pin.png" id="2_o71ra"]
[ext_resource type="Texture2D" uid="uid://bgrts0i3rigk2" path="res://resources/buttons/pin_pressed.png" id="3_ps3ih"]
[ext_resource type="Texture2D" uid="uid://7ilvvry882qb" path="res://resources/buttons/pin_hover.png" id="4_vh3tp"]
[ext_resource type="Texture2D" uid="uid://ddsrge8bsgij8" path="res://resources/buttons/unfold.png" id="5_r0uya"]
[ext_resource type="Texture2D" uid="uid://b14squkq4hdi" path="res://resources/buttons/unfold_hover.png" id="6_7mv4j"]

[node name="CompactView" type="Node2D"]
script = ExtResource("1_frukj")

[node name="PinButton" type="TextureButton" parent="."]
offset_right = 211.0
offset_bottom = 247.0
scale = Vector2(0.05, 0.05)
toggle_mode = true
texture_normal = ExtResource("2_o71ra")
texture_pressed = ExtResource("3_ps3ih")
texture_hover = ExtResource("4_vh3tp")

[node name="TrackingLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1.0
offset_right = 173.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "no tracking"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="UnfoldButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 1.0
offset_top = 38.0
offset_right = 21.0
offset_bottom = 58.0
texture_normal = ExtResource("5_r0uya")
texture_hover = ExtResource("6_7mv4j")
ignore_texture_size = true
stretch_mode = 5

[connection signal="toggled" from="PinButton" to="." method="_on_texture_button_toggled"]
[connection signal="pressed" from="UnfoldButton" to="." method="_on_unfold_button_pressed"]
